# mini-filter-driver-framework

./: README.md  ReadMe.txt
Demo_Source_Code/: Demo.sln  Demo2010.sln  ReadMe.txt
Demo_Source_Code/AutoEncryptDemo/: AutoEncryptDemo.csproj  AutoEncryptDemo.vs2019.csproj  AutoEncryptForm.Designer.cs  AutoEncryptForm.cs  AutoEncryptForm.resx  DRMServer.cs  Program.cs
Demo_Source_Code/AutoFileCryptTool/: AutoFileCryptTool.csproj  AutoFileCryptTool.vs2019.csproj  BlackListForm.Designer.cs  BlackListForm.cs  DropFolderForm.cs  FilterDriverService.cs  FormFileCrypt.Designer.cs  FormFileCrypt.cs  FormFileCrypt.resx  PasswordForm.Designer.cs  PasswordForm.cs  PasswordForm.resx  Program.cs  SetupPasswordForm.Designer.cs  SetupPasswordForm.cs  TrayForm.Designer.cs  TrayForm.cs  VerifyPassword.cs  app.manifest
Demo_Source_Code/CPlusPlusDemo/: CPlusPlusDemo.cpp  CPlusPlusDemo.rc  ControlFilterHandler.cpp  ControlFilterHandler.h  EaseFltCPPDemo.vcxproj.filters  EaseFltCPPDemo.vs2019.vcxproj  EaseFltCPPDemo.vs2019.vcxproj.filters  EncryptionHandler.h  EncryptionTest.cpp  FileControlHandler.h  FileMonitorHandler.h  FilterAPI.h  FilterControl.cpp  FilterControl.h  FilterMessage.cpp  FilterRule.h  FilterWorker.cpp  ProcessFilterHandler.h  ProcessFilterTest.cpp  ProcessFilterTest.h  ReadMe.txt  RegistryFilterHandler.h  RegistryFilterTest.cpp  ReparseFilterHandler.h  StubFileHandler.h  TestData.cpp  TestData.h  Tools.cpp  Tools.h  UnitTest.cpp  WinDataStructures.h  WindowsService.cpp  stdafx.cpp  stdafx.h
Demo_Source_Code/CommonObjects/: AccessRightsForm.Designer.cs  AccessRightsForm.cs  CommonObjects.csproj  ConfigSetting.cs  ControlFilterRuleSettigs.Designer.cs  ControlFilterRuleSettigs.cs  EventForm.Designer.cs  EventManager.cs  FilterAPI.cs  FilterRuleForm.Designer.cs  FilterRuleForm.cs  FilterRuleSection.cs  GlobalConfig.cs  InputForm.cs  InputForm.resx  MessageBoxHelper.cs  OptionForm.cs  OptionForm.designer.cs  ProcessFilterRuleSection.cs  ProcessFilterSetting.cs  ProcessFilterSettingForm.Designer.cs  ProcessFilterSettingForm.cs  RegisterForm.cs  RegistryAccessControlForm.cs  RegistryAccessControlHandler.cs  RegistryFilterRuleSection.cs  SettingsForm.Designer.cs  SettingsForm.cs
Demo_Source_Code/EaseFltCPPDemo/: AESEncryption.cpp  AESEncryption.h  CPlusPlusDemo.cpp  CPlusPlusDemo.rc  ControlFilterHandler.cpp  ControlFilterHandler.h  EaseFltCPPDemo.vcxproj  EaseFltCPPDemo.vcxproj.filters  EncryptionHandler.h  FeatureDemo.cpp  FileControlHandler.h  FileMonitorHandler.h  FilterAPI.h  FilterControl.cpp  FilterControl.h  FilterMessage.cpp  FilterMessage.h  FilterRule.h  FilterWorker.cpp  FilterWorker.h  ProcessFilterHandler.h  RegistryFilterTest.h  Tools.cpp  Tools.h  UnitTest.cpp  UnitTest.h  WinDataStructures.h  WindowsService.cpp  WindowsService.h  resource.h
Demo_Source_Code/EaseFltCSConsoleDemo/: EaseFilterService.cs  EaseFltCSConsoleDemo.csproj  FilterWorker.cs  MonitorEventHandler.cs  Program.cs  ServiceInstaller.cs
Demo_Source_Code/EaseFltDelphiDemo/: EaseFlt.res  EaseFlt.stat  EaseFltDemo.dfm  EaseFltDemo.pas  FileFunctions.pas  FilterAPI.pas  FltDemo.dpr  FltDemo.dproj  FltDemo.identcache  FltDemo.res  FltDemo.stat  GeneralFunctions.pas  GlobalConfig.pas
Demo_Source_Code/FileMonitor/: FileMonitor.csproj  FileMonitor.vs2019.csproj  MonitorEventHandler.cs  MonitorForm.Designer.cs  MonitorForm.cs  MonitorForm.resx  MonitorUnitTest.Designer.cs  MonitorUnitTest.cs  MonitorUnitTest.resx  Program.cs  TrayForm.Designer.cs  TrayForm.cs  app.config
Demo_Source_Code/FileMonitorConsole/: FileMonitorConsole.csproj  Program.cs
Demo_Source_Code/FileProtector/: ControlEventHandler.cs  DecryptionForm.Designer.cs  DecryptionForm.cs  EncryptEventHandler.cs  EncryptionForm.Designer.cs  EncryptionForm.cs  (+13 more)
Demo_Source_Code/PythonDemo/: README.md  config.toml  ef-python.pyproj  ef-python.sln  pyproject.toml  requirements.txt
Demo_Source_Code/PythonDemo/easefilter/: __init__.py  _ef_class.py  bitmask.py  config.py  enums.py  errors.py  events.py  filter_api.py  rules.py  types.py
Demo_Source_Code/PythonDemo/easefilter/cli/: __main__.py  formatters.py  main.py  rules.py
Demo_Source_Code/PythonDemo/tests/: conftest.py  test_bitmasks.py  test_control_filter.py  test_driver_basics.py  test_encryption_filter.py  test_monitor_filter.py  test_process_filter.py  test_registry_filter.py
Doc/: License.rtf  Manual.docx  Order Products.url  easefilter_changeset.txt
(+425 files in other folders)
